# swagger/swagger-output.json
@@ -900,6 +900,15 @@
               "type": "integer",
               "default": 15
             }
+          },
+          {
+            "name": "board_id",
+            "in": "query",
+            "description": "필터링할 게시판 ID",
+            "required": false,
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "responses": {
@@ -947,6 +956,15 @@
               "type": "integer",
               "default": 15
             }
+          },
+          {
+            "name": "board_id",
+            "in": "query",
+            "description": "필터링할 게시판 ID",
+            "required": false,
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "responses": {
@@ -990,6 +1008,15 @@
             "schema": {
               "type": "integer",
               "default": 15
+            }
+          },
+          {
+            "name": "board_id",
+            "in": "query",
+            "description": "필터링할 게시판 ID",
+            "required": false,
+            "schema": {
+              "type": "integer"
             }
           }
         ],
